--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <h3 id="clicked">View Results</h3>
     <ul id="results"></ul>
 
+    <canvas id="myChart" width="400" height="400"></canvas>
 
 
 
@@ -28,7 +29,7 @@
 
   </main>
   <footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
     <script src="js/app.js"></script>
   </footer>
 
